# mrs_tasks

./: README.md
mrs_main/: .gitignore  CMakeLists.txt  notatki.md  package.xml  przydatne.txt  setup.cfg  setup.py
mrs_main/docs/: project_sysml_requirements.md
mrs_main/launch/: mulit_robot_system.launch  mulit_robot_system.launch:Zone.Identifier  one_robot.launch  panda.launch  robot_scanner.launch  robots.launch
mrs_main/map/: house.pgm  small_house.pgm  small_house.yaml
mrs_main/mrs_main/: agent_entrypoint.py  dummy_task_generator.py
mrs_main/mrs_main/agent/: agent.py
mrs_main/mrs_main/common/: constants.py  conversation_data.py  exceptions.py  objects.py
mrs_main/mrs_main/communication/: orders_manager.py
mrs_main/mrs_main/task_execution/: task_executor.py
mrs_main/mrs_main/tasks_management/: dependency_manager.py  task.py  task_fsm.py  (+2 more)
mrs_main/param/: cmd_mux_config.yaml  global_costmap_conf.yaml  global_planer_conf.yaml  local_costmap_conf.yaml  local_planer_conf.yaml  rotate_recovery_conf.yaml
mrs_main/rviz/: multi_robot.rviz
mrs_main/scripts/: HelpfulFunctions.py  PLANMaster.py  PLANMasterClass.py  ROSMaster.py  RobotTaskHarmoniser.py  Turtlebot.py  constants.py  main.py  test_turtlebot.py
mrs_main/src/: mrs_planer.cpp  mvit_tutorial.py  panda_pose.py  plan_master_client.py  plan_master_client_copy.py  robot1_conf.cpp  robot2_conf.cpp
mrs_main/test/: test_copyright.py  test_dependency_manager.py  test_flake8.py  test_pep257.py  test_task_fsm.py  test_task_manager_interface.py
mrs_main/worlds/: multi_robot_house.world  small_house.world
(+72 files in other folders)
