<?xml version="1.0"?>
<package format="3">
  <name>mrs_main</name>
  <version>0.0.1</version>
  <description>Framework for task allocation and coordination in distributed system</description>
  <maintainer email="mateuszzembron@gmail.com">Mateusz Zembron</maintainer>
  <author>Mateusz Zembron</author>
  <license>BSD</license>

  <!-- build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- app -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
