<?xml version="1.0"?>
<package format="3">
  <name>mrs_main</name>
  <version>0.0.1</version>
  <description>Framework for task allocation and coordination in distributed system</description>
  <maintainer email="mateuszzembron@gmail.com">Mateusz Zembron</maintainer>
  <author>Mateusz Zembron</author>
  <license>BSD</license>

  <!-- app -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
